--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,9 @@ html {
   margin-top: 20px;
   font-size: 20px;
 }
+
+@media (max-width: 500px) { /* optimize for mobile */
+  .title{
+    font-size: 4rem;
+  }
+}
