--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,8 @@ html {
   margin-top: 60px;
   text-align: center;
   width: 60vw;
-  font-size: 2.7rem;
+  /* font-size: 2.7rem; */
+  font-size: 3vw;
   color: whitesmoke;
 }
 
@@ -175,7 +176,16 @@ html {
   text-decoration: underline;
 }
 
-@media (max-width: 700px) { /* optimize for mobile */
+@media (max-width: 1200px) { /* optimize for mobile */
+
+  .description{
+    width: 80vw;
+    margin-top: 30px;
+    font-size: 4vw;
+  }
+}
+
+@media (max-width: 800px) { /* optimize for mobile */
   .title{
     width: 100vw;
     font-size: 3rem;
@@ -184,6 +194,19 @@ html {
   .description{
     width: 80vw;
     margin-top: 30px;
-    font-size: 2rem;
+    font-size: 5vw;
+  }
+}
+
+@media (max-width: 450px) { /* optimize for mobile */
+  .title{
+    width: 100vw;
+    font-size: 3rem;
+  }
+
+  .description{
+    width: 80vw;
+    margin-top: 30px;
+    font-size: 7vw;
   }
 }
