--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ html {
 }
 
 .content{
+  border: 1px solid red;
   width: 100vw;
   font-size: 2rem;
 }
@@ -99,7 +100,7 @@ html {
   background-size: cover;
   height: 100vh;
   width: 100vw;
-  /* border: 1px solid red; */
+  border: 1px solid blue;
 }
 
 .title{
@@ -108,13 +109,13 @@ html {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  font-size: 7rem;
+  font-size: 3em;
   font-family:'ArialBlack-', sans-serif;
   color: #ffd700;
   text-shadow: 0.2rem 0.2rem black;
   text-align: center;
   /* border: 1px solid red; */
-  width: 50vw;
+  /* width: 50vw; */
 
   animation: fadeIn 2.5s ease-in;
 }
@@ -230,8 +231,8 @@ html {
 
 @media (max-width: 450px) { /* optimize for mobile */
   .title{
-    width: 100vw;
-    font-size: 3rem;
+    width: 80vw;
+    font-size: 1em;
   }
 
   .description{
