Language selector fix 17

--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ html {
   width: 30vw;
   height: 30vw;
   /* background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%); */
-  background-image: url(hope_img_1.jpeg);
+  background-image: url(hope_img_1.jpg);
   background-position-x: -15px;
   background-size: cover;
   border-radius: 20px;
@@ -311,7 +311,7 @@ html {
     width: 60vw;
     height: 70vw;
     /* background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%); */
-    background-image: url(hope_img_1.jpeg);
+    background-image: url(hope_img_1.jpg);
     background-position-x: -15px;
     background-size: cover;
     border-radius: 20px;
@@ -322,7 +322,7 @@ html {
     /* position: relative; */
     /* display: flex; */
     /* flex-direction: column; */
-    border: 1px solid lime;
+    /* border: 1px solid lime; */
     /* top: -30vw; */
     width: 80%;
     margin: auto;
@@ -347,7 +347,7 @@ html {
 
     /* font-size: 10px; */
     color: #4e4a67;
-    border:1px solid pink;
+    /* border:1px solid pink; */
 
   }
   
