Language selector fix 18

--- a/styles.css
+++ b/styles.css
@@ -299,6 +299,7 @@ html {
     background-color: white;
     font-family: "Fira Sans", sans-serif;
     padding: 0px;
+    padding-bottom: 20px;
     /* background: linear-gradient(90deg, #0ba5ff,#6ebae6);
     border-color: linear-gradient(90deg, #0ba5ff,#6ebae6); */
     /* margin-top: 40px; */
