--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ html {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  font-size: 12em;
+  font-size: 9vw;
   font-weight: 600;
   /* font-family:'ArialBlack-', sans-serif; */
   color: #FFF8DC; 
@@ -175,7 +175,7 @@ html {
   font-family: "Fira Sans", sans-serif;
   width: 70vw;
   /* height: max-content; */
-  font-size: 5vw;
+  font-size: 2.5vw;
   color: #FFF8DC;
   /* border: 1px solid red; */
 }
@@ -299,8 +299,21 @@ html {
 
 @media (max-width: 550px){
   .title{
-    font-size: 3.5em;
+    font-size: 6vh;
     text-shadow: 2px 0 0 #DAA520, 0 -2px 0 #DAA520, 0 2px 0 #DAA520, -2px 0 0 #DAA520, 5px 5px #DAA520;
+  }
+
+  .description{
+    flex: 1 1 auto;
+    margin: auto;
+    margin-top: 40px;
+    text-align: center;
+    font-family: "Fira Sans", sans-serif;
+    width: 70vw;
+    /* height: max-content; */
+    font-size: 2.5vh;
+    color: #FFF8DC;
+    /* border: 1px solid red; */
   }
 
   .org_box{
@@ -361,7 +374,6 @@ html {
     max-height: 100%;
     min-height: 90%;
     height: 90%;
-    font-size: 2vh;
     /* height: auto; */
 
     /* font-size: 10px; */
@@ -376,7 +388,8 @@ html {
     margin: auto;
     margin-top: 40px;
     padding: 15px 35px;
-    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+    /* background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%); */
+    background-image: linear-gradient(147deg, #1E90FF 0%, #1E90FF 74%);
     border-radius: 50px;
     letter-spacing: 1px;
     color: #fff;
